--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,1 +1,13 @@
-<h1>About Us</h1>
+<div class="card text-center">
+  <div class="card-header">
+    <h1>About Us</h1>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">A simple Friends List app</h5>
+    <p class="card-text">This is a simple app made in Ruby on Rails with Bootstrap.</p>
+    <%= link_to 'Home', root_path %>
+  </div>
+  <div class="card-footer text-muted">
+    <%= link_to 'Amir Drljevic', 'https://www.linkedin.com/in/amirdrljevic', target: :blank %>
+  </div>
+</div>
