--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -30,8 +30,21 @@
   <%= link_to 'New Friend', new_friend_path, class: "btn btn-secondary" %>
 
 <% else %>
-  <h1>Hello World</h1>
-  
+<div class="card text-center">
+  <div class="card-header">
+    <h1>Friend App</h1>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">A simple Friends List app</h5>
+    <p class="card-text">This is a simple app made in Ruby on Rails with Bootstrap.</p>
+    You don't have account? <%= link_to 'Sign up', new_user_registration_path %>
+    <p> If you already have account here, then simply <%= link_to 'Log in', new_user_session_path %></p>
+  </div>
+  <div class="card-footer text-muted">
+    <%= link_to 'Amir Drljevic', 'https://www.linkedin.com/in/amirdrljevic', target: :blank %>
+  </div>
+</div>
+
 
 
 <% end %>
