--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -14,30 +14,39 @@
           <li class="nav-item">
             <%= link_to "Add friend", new_friend_path, class:"nav-link" %>
           </li>            
-        
-	        <li class="nav-item">
-	          <%= link_to "Sign out", destroy_user_session_path,
-	          						  method: :delete, class:"nav-link" %>
-	        </li>   
-
 	        <li class="nav-item">
 	          <%= link_to "Edit profile", edit_user_registration_path, class:"nav-link" %>
 	        </li>  
-
 	      <% else %>
 
-	        <li class="nav-item">
-	          <%= link_to "Sign up", new_user_registration_path, class:"nav-link" %>
-	        </li>   
-
-	        <li class="nav-item">
-	          <%= link_to "Sing in", new_user_session_path, class:"nav-link" %>
-	        </li>   
-
 	      <% end %>
-                                     
+                        
       </ul>
 
+      <ul class="navbar-nav mb-2 mb-lg-0 ">
+      	<% if user_signed_in? %>
+		      <span class="navbar-text" style="float: right;">
+		        	Logged in: <strong><%= current_user.email %></strong> |
+		      </span>   
+          <li class="nav-item">
+	          <%= link_to "Log out", destroy_user_session_path,
+	          						  method: :delete, class:"nav-link" %>
+	        </li>   
+      	<% else %>
+		      <span class="navbar-text" style="float: right;">
+		        	<strong>Not logged in</strong> |
+		      </span>        	
+		      <li class="nav-item">
+		        <%= link_to "Sign up", new_user_registration_path, class:"nav-link" %>
+		      </li>   
+
+		      <li class="nav-item">
+		        <%= link_to "Log in", new_user_session_path, class:"nav-link" %>
+		      </li>   
+		     <% end %>
+    	</ul>
+
+ 
     </div>
   </div>
 </nav>
